<resources>
    <string name="app_name">ru.mirea.MaiorovSevostyanov.NewsApp</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_button_text">Войти</string>
    <string name="register_button_text">Регистрация</string>
    <string name="guest_button_text">Войти как гость</string>
    <string name="email_hint">Электронная почта</string>
    <string name="password_hint">Пароль</string>
    <string name="login_success">Вход выполнен успешно</string>
    <string name="login_error">Ошибка входа: %1$s</string>

    <string name="app_icon_desc">Иконка приложения</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>