<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.activites.AuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EAEAEA"
        android:orientation="vertical"
        android:padding="16dp">

        <View
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edit_text"
            android:contentDescription="@string/app_icon_desc"
            android:elevation="8dp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="Авторизация"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:autofillHints="username"
            android:background="@drawable/rounded_edit_text"
            android:hint="Имя пользователя"
            android:inputType="text"
            android:padding="12dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="12dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:backgroundTint="#D9D9D9"
            android:text="@string/login_button_text"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:backgroundTint="#EAEAEA"
            android:text="@string/register_button_text"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/guestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:backgroundTint="#EAEAEA"
            android:text="@string/guest_button_text"
            android:textColor="#000000"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="16dp"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>